--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
     </section>
     <section>
-      <div class="container-fluid works_section">
+      <div class="container-fluid portfolio_section">
         <div class="row">
           <div class="col-12">
               <div class="portfolio_header text-center">
@@ -193,64 +193,62 @@
         </div>
         <div class="row">
           <div class="col-12 text-center">
-              <div class="portfolio_menu">
-                  <button type="button" data-filter=".portfolio_all">ALL<button>
-                  <button type="button" data-filter=".print-design">PRINT DESIGN<button>
-                  <button type="button" data-filter=".animation">ANIMATION<button>
-                  <button type="button" data-filter=".art">ART<button>
-                  <button type="button" data-filter=".web-design">WEB DESIGN<button>
-                  <button type="button" data-filter=".photography">PHOTOGRAPHY<button>
-                  <button type="button" data-filter=".video">VIDEO<button>
+              <div class="portfolio_menu controls">
+                  <button type="button" class="control" data-filter="all">All</button>
+                  <button type="button" class="control" data-toggle=".portfolio_wordpress">Wordpress</button>
+                  <button type="button" class="control" data-toggle=".portfolio_plugins">Plugins</button>
+                  <button type="button" class="control" data-toggle=".portfolio_vuejs">Vue.js</button>
+                  <button type="button" class="control" data-toggle=".portfolio_webdesign">Web Design</button>
               </div>
           </div>
         </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_1.png")'>
+        <div class="row justify-content-center mixitup_container">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_wordpress" style='background-image: url("img/works_item_1.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Wordpress 1</h3>
+              <div class="portfolio_item_desc">Wordpress</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_2.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_plugins" style='background-image: url("img/works_item_2.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Plugin 1</h3>
+              <div class="portfolio_item_desc">Plugins</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_3.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_vuejs" style='background-image: url("img/works_item_3.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Vue 1</h3>
+              <div class="portfolio_item_desc">Vue.js</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_4.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_webdesign" style='background-image: url("img/works_item_4.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Web Design 1</h3>
+              <div class="portfolio_item_desc">Web design</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_5.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_wordpress" style='background-image: url("img/works_item_5.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Wordpress 2</h3>
+              <div class="portfolio_item_desc">Wordpress</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_6.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_plugins" style='background-image: url("img/works_item_6.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Plugin 2</h3>
+              <div class="portfolio_item_desc">Plugins</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_7.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_vuejs" style='background-image: url("img/works_item_7.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Vue 2</h3>
+              <div class="portfolio_item_desc">Vue.js</div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item" style='background-image: url("img/works_item_8.png")'>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-12 portfolio_item mix portfolio_webdesign" style='background-image: url("img/works_item_8.png")'>
             <div class="portfolio_item_text">
-              <h3 class="portfolio_item_heading">T-SHIRT DESIGN</h3>
-              <div class="portfolio_item_desc">art / t-shirt</div>
+              <h3 class="portfolio_item_heading">Web Design 2</h3>
+              <div class="portfolio_item_desc">Web design</div>
             </div>
           </div>
         </div>
@@ -754,6 +752,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- mixitup filtration plugin -->
     <script src="js/mixitup.min.js"></script>
+    <script>
+            var containerEl = document.querySelector('.mixitup_container');
+
+            var mixer = mixitup(containerEl, {
+                controls: {
+                    toggleLogic: 'and'
+                }
+            });
+    </script>
     <!-- Back to top button-->
     <script src="js/backtotop.js"></script>
     <script src="js/form_validator.js"></script>
