radio filtering portfolio works

--- a/index.html
+++ b/index.html
@@ -193,13 +193,28 @@
         </div>
         <div class="row">
           <div class="col-12 text-center">
-              <div class="portfolio_menu controls">
-                  <span class="control" data-filter="all">All</span>
-                  <span class="control" data-toggle=".portfolio_wordpress">Wordpress</span>
-                  <span class="control" data-toggle=".portfolio_plugins">Plugins</span>
-                  <span class="control" data-toggle=".portfolio_vuejs">Vue.js</span>
-                  <span class="control" data-toggle=".portfolio_webdesign">Web Design</span>
-              </div>
+            <div class="portfolio_menu controls">
+                <span class="radio">
+                  <input name="portfolio_item_radio" id="portfolio_all" type="radio" value="all" checked/>
+                  <label class="radio-label" for="portfolio_all">All</label>               
+                </span>
+                <span class="radio">
+                  <input name="portfolio_item_radio" id="portfolio_wordpress" type="radio" value=".portfolio_wordpress"/>
+                  <label class="radio-label" for="portfolio_wordpress">Wordpress</label>
+                </span>
+                <span class="radio">
+                  <input name="portfolio_item_radio" id="portfolio_plugins" type="radio" value=".portfolio_plugins"/>
+                  <label class="radio-label" for="portfolio_plugins">Plugins</label>                
+                </span>
+                <span class="radio">
+                  <input name="portfolio_item_radio" id="portfolio_vuejs" type="radio" value=".portfolio_vuejs"/>
+                  <label class="radio-label" for="portfolio_vuejs">Vue.js</label>                  
+                </span>
+                <span class="radio">
+                  <input name="portfolio_item_radio" id="portfolio_webdesign" type="radio" value=".portfolio_webdesign"/>
+                  <label class="radio-label" for="portfolio_webdesign">Web Design</label>                
+                </span>
+            </div>
           </div>
         </div>
         <div class="row justify-content-center mixitup_container">
@@ -753,13 +768,18 @@
     <!-- mixitup filtration plugin -->
     <script src="js/mixitup.min.js"></script>
     <script>
-            var containerEl = document.querySelector('.mixitup_container');
+      // In this example, we must bind a 'change' event handler to
+      // our radios, then interact with the mixer via
+      // its .filter() API methods.
+      var containerEl = document.querySelector('.mixitup_container');
+      var radiosFilter = document.querySelector('.controls');
+      var mixer = mixitup(containerEl);
 
-            var mixer = mixitup(containerEl, {
-                controls: {
-                    toggleLogic: 'or'
-                }
-            });
+      radiosFilter.addEventListener('change', function() {
+          var checked = radiosFilter.querySelector(':checked');
+          var selector = checked ? checked.value : 'all';
+          mixer.filter(selector);
+      });
     </script>
     <!-- Back to top button-->
     <script src="js/backtotop.js"></script>
