--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="row justify-content-center text-center">
             <div class="col-md-12">
               <p class="mainscreen_subheading">Our Clients Are Our First Priority</p>
-              <h1 class="mainscreen_heading">Welcome to Bino</h1>
+              <h1 class="mainscreen_heading">Welcome to Digital Art Agency</h1>
               <div class="title_dot"></div>
             </div>
           </div>
@@ -61,16 +61,16 @@
         <div class="triangle_block">
           <div class="text-center triangle_box">
             <div class="two_triangles">
-              <div class="circle_decorative">
-                <img class="circle_decorative_icon" src="img/mainscreen_icon_1.png" alt="mainscreen_icon_1">
-              </div>
+                <div class="circle_decorative" id="circle_decorative_anchor">
+                  <img class="circle_decorative_icon" src="img/mainscreen_icon_1.png" alt="mainscreen_icon_1">
+                </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <section>
-      <div class="container features_section">
+      <div class="container features_section" id="anchor_target">
         <div class="row justify-content-center text-center">
           <div class="col-md-3 col-sm-6 features_item">
            <div class="feutures_item_icon_block">
