--- a/main.html
+++ b/main.html
@@ -274,59 +274,6 @@
       </div>
     </section>
     <section>
-      <div class="casestudy_section">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-                <div class="text-center">
-                  <h2 class="section_heading">Case study</h2>
-                  <p>It has survived not only five centuries, but also the leap scrambled it to make a type.</p>
-                  <div class="title_dot"></div>
-                </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="owl-carousel owl-theme">
-                <div>
-                  <h2>First Slide</h2>
-                </div>
-                <div>
-                  <h2>Second Slide</h2>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="col-md-12">
-
-                <div class="slider_item_box">
-
-                  <div class="slider_item_background" style="background-image: url(img/slider_bg_1.jpg);"></div>
-
-                  <div class="slider_item">
-                    <div class="square_decorative_box">
-                      <div class="square_decorative">
-                        <div class="square_icon_box">
-                          <img src="img/slider_icon_3.png" alt="slider_icon_3">
-                        </div>
-                      </div>
-                    </div>
-                    <h3 class="slider_item_heading">Accumulate creative ideas</h3>
-                    <div class="slider_item_text">
-                      Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
-                    </div>
-                    <button class="button first_button">Read more</button>
-                  </div>
-
-                </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
       <div class="new_casestudy_section">
         <div class="container">
           <div class="row">
@@ -339,11 +286,37 @@
           <div class="row">
             <div class="col-md-6">
               <div class="owl-carousel owl-theme">
-                <div>
-                  <h2>First Slide</h2>
+                <div class="new_slider_item">
+
+                    <div class="square_decorative_box">
+                      <div class="square_decorative">
+                        <div class="square_icon_box">
+                          <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                        </div>
+                      </div>
+                    </div>
+                    <h3 class="slider_item_heading">First Slide</h3>
+                    <div class="slider_item_text">
+                      Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
+                    </div>
+                    <button class="button first_button">Read more</button>
+
                 </div>
-                <div>
-                  <h2>Second Slide</h2>
+                <div class="new_slider_item">
+
+                    <div class="square_decorative_box">
+                      <div class="square_decorative">
+                        <div class="square_icon_box">
+                          <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                        </div>
+                      </div>
+                    </div>
+                    <h3 class="slider_item_heading">Second Slide</h3>
+                    <div class="slider_item_text">
+                      Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
+                    </div>
+                    <button class="button first_button">Read more</button>
+
                 </div>
               </div>
             </div>
