owl event listener

--- a/main.html
+++ b/main.html
@@ -274,7 +274,7 @@
       </div>
     </section>
     <section>
-      <div class="new_casestudy_section">
+      <div class="casestudy_section">
         <div class="container">
           <div class="row">
             <div class="col-12 text-center">
@@ -284,44 +284,56 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
-              <div class="owl-carousel owl-theme">
-                <div class="new_slider_item">
-
-                    <div class="square_decorative_box">
-                      <div class="square_decorative">
-                        <div class="square_icon_box">
-                          <img src="img/slider_icon_3.png" alt="slider_icon_3">
+            <div class="col-md-6 col-10">
+              <div class="casestudy_slide_block">
+                <div class="owl-carousel owl-theme">
+                  <div class="slider_item text-center">
+                      <div class="square_decorative_box">
+                        <div class="square_decorative">
+                          <div class="square_icon_box">
+                            <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <h3 class="slider_item_heading">First Slide</h3>
-                    <div class="slider_item_text">
-                      Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
-                    </div>
-                    <button class="button first_button">Read more</button>
-
-                </div>
-                <div class="new_slider_item">
-
-                    <div class="square_decorative_box">
-                      <div class="square_decorative">
-                        <div class="square_icon_box">
-                          <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                      <h3 class="slider_item_heading">First Slide</h3>
+                      <div class="slider_item_text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
+                      </div>
+                      <button class="button first_button">Read more</button>
+                  </div>
+                  <div class="slider_item text-center">
+                      <div class="square_decorative_box">
+                        <div class="square_decorative">
+                          <div class="square_icon_box">
+                            <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <h3 class="slider_item_heading">Second Slide</h3>
-                    <div class="slider_item_text">
-                      Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
-                    </div>
-                    <button class="button first_button">Read more</button>
-
+                      <h3 class="slider_item_heading">Second Slide</h3>
+                      <div class="slider_item_text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
+                      </div>
+                      <button class="button first_button">Read more</button>
+                  </div>
+                  <div class="slider_item text-center">
+                      <div class="square_decorative_box">
+                        <div class="square_decorative">
+                          <div class="square_icon_box">
+                            <img src="img/slider_icon_3.png" alt="slider_icon_3">
+                          </div>
+                        </div>
+                      </div>
+                      <h3 class="slider_item_heading">Third Slide</h3>
+                      <div class="slider_item_text">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry. Lorem Ipsum is simply dummy text of the printing and typesetting let. Lorem Ipsum has been the industry Printing and typelorem Ipsum has been the setting let.
+                      </div>
+                      <button class="button first_button">Read more</button>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
-              <div class="new_casestudy_slide_bg" style="background-image: url(img/slider_bg_1.jpg);"></div>
+            <div>
+              <div class="casestudy_slide_bg" style="background-image: url(img/slider_bg_1.jpg);"></div>
             </div>
 
           </div>
